include/crispasr_session.h

struct crispasr_session;
typedef struct crispasr_session crispasr_session;
struct crispasr_session_result;
typedef struct crispasr_session_result crispasr_session_result;
struct crispasr_vad_abi_opts;
typedef struct crispasr_vad_abi_opts crispasr_vad_abi_opts;
CRISPASR_SESSION_API crispasr_session* crispasr_session_open_explicit(const char* model_path, const char* backend_name,
                                                                      int n_threads);
CRISPASR_SESSION_API crispasr_session* crispasr_session_open(const char* model_path, int n_threads);
CRISPASR_SESSION_API int crispasr_session_available_backends(char* out_csv, int out_cap);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_lang(crispasr_session* s, const float* pcm,
                                                                               int n_samples, const char* language);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe(crispasr_session* s, const float* pcm,
                                                                          int n_samples);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_vad_lang(
    crispasr_session* s, const float* pcm, int n_samples, int sample_rate, const char* vad_model_path,
    const crispasr_vad_abi_opts* opts_or_null, const char* language);
CRISPASR_SESSION_API crispasr_session_result* crispasr_session_transcribe_vad(
    crispasr_session* s, const float* pcm, int n_samples, int sample_rate, const char* vad_model_path,
    const crispasr_vad_abi_opts* opts_or_null);
CRISPASR_SESSION_API int crispasr_session_result_n_segments(crispasr_session_result* r);
CRISPASR_SESSION_API const char* crispasr_session_result_segment_text(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_session_result_segment_t0(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int64_t crispasr_session_result_segment_t1(crispasr_session_result* r, int i);
CRISPASR_SESSION_API int crispasr_session_result_n_words(crispasr_session_result* r, int i_seg);
CRISPASR_SESSION_API const char* crispasr_session_result_word_text(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API int64_t crispasr_session_result_word_t0(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API int64_t crispasr_session_result_word_t1(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API float crispasr_session_result_word_p(crispasr_session_result* r, int i_seg, int i_word);
CRISPASR_SESSION_API int crispasr_session_set_codec_path(crispasr_session* s, const char* path);
CRISPASR_SESSION_API int crispasr_session_set_voice(crispasr_session* s, const char* path,
                                                    const char* ref_text_or_null);
CRISPASR_SESSION_API int crispasr_session_set_speaker_name(crispasr_session* s, const char* name);
CRISPASR_SESSION_API int crispasr_session_set_speaker_id(crispasr_session* s, int id);
CRISPASR_SESSION_API int crispasr_session_n_speakers(crispasr_session* s);
CRISPASR_SESSION_API const char* crispasr_session_get_speaker_name(crispasr_session* s, int i);
CRISPASR_SESSION_API int crispasr_session_set_instruct(crispasr_session* s, const char* instruct);
CRISPASR_SESSION_API int crispasr_session_is_custom_voice(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_is_voice_design(crispasr_session* s);
CRISPASR_SESSION_API float* crispasr_session_synthesize(crispasr_session* s, const char* text, int* out_n_samples);
CRISPASR_SESSION_API void crispasr_pcm_free(float* pcm);
CRISPASR_SESSION_API int crispasr_session_set_hotwords(crispasr_session* s, const char* hotwords, float boost);
CRISPASR_SESSION_API void crispasr_session_close(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_kokoro_clear_phoneme_cache(crispasr_session* s);
CRISPASR_SESSION_API int crispasr_session_kokoro_clear_phoneme_cache(crispasr_session*);
CRISPASR_SESSION_API int crispasr_session_set_source_language(crispasr_session* s, const char* lang);
CRISPASR_SESSION_API int crispasr_session_set_target_language(crispasr_session* s, const char* lang);
CRISPASR_SESSION_API int crispasr_session_set_punctuation(crispasr_session* s, int enable);
// Select + load a punctuation-restoration model (alias auto|firered|fullstop|
// punctuate-all|pcs, or a .gguf path; "none"/NULL unloads). Auto-downloads on
// first use. Restores punctuation on backends that emit none (parakeet, CTC).
// Returns 0 on success/unload, -1 bad handle, -2 load failed, -3 not compiled.
CRISPASR_SESSION_API int crispasr_session_set_punc_model(crispasr_session* s, const char* punc_model);
CRISPASR_SESSION_API int crispasr_session_set_translate(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_set_ask(crispasr_session* s, const char* prompt);
CRISPASR_SESSION_API int crispasr_session_set_temperature(crispasr_session* s, float temperature, uint64_t seed);
CRISPASR_SESSION_API int crispasr_session_set_tts_seed(crispasr_session* s, uint64_t seed);
CRISPASR_SESSION_API int crispasr_session_set_tts_steps(crispasr_session* s, int steps);
CRISPASR_SESSION_API int crispasr_session_set_tts_num_candidates(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_g2p_dict(crispasr_session* s, const char* source);
CRISPASR_SESSION_API int crispasr_session_set_top_p(crispasr_session* s, float top_p);
CRISPASR_SESSION_API int crispasr_session_set_min_p(crispasr_session* s, float min_p);
CRISPASR_SESSION_API int crispasr_session_set_repetition_penalty(crispasr_session* s, float r);
CRISPASR_SESSION_API int crispasr_session_set_top_k(crispasr_session* s, int top_k);
CRISPASR_SESSION_API int crispasr_session_set_do_sample(crispasr_session* s, int enable);
CRISPASR_SESSION_API int crispasr_session_set_cfg_weight(crispasr_session* s, float cfg_weight);
CRISPASR_SESSION_API int crispasr_session_set_tts_noise_temp(crispasr_session* s, float noise_temp);
CRISPASR_SESSION_API int crispasr_session_set_exaggeration(crispasr_session* s, float exaggeration);
CRISPASR_SESSION_API int crispasr_session_set_max_speech_tokens(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_length_scale(crispasr_session* s, float scale);
CRISPASR_SESSION_API int crispasr_session_set_best_of(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_max_new_tokens(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_frequency_penalty(crispasr_session* s, float penalty);
CRISPASR_SESSION_API int crispasr_session_set_beam_size(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_grammar_text(crispasr_session* s, const char* gbnf_text,
                                                           const char* root_rule, float penalty);
CRISPASR_SESSION_API int crispasr_session_set_fallback_thresholds(crispasr_session* s, float entropy_thold,
                                                                  float logprob_thold, float no_speech_thold,
                                                                  float temperature_inc);
CRISPASR_SESSION_API int crispasr_session_set_alt_n(crispasr_session* s, int n);
CRISPASR_SESSION_API int crispasr_session_set_whisper_decode_extras(crispasr_session* s, int suppress_nst,
                                                                    const char* suppress_regex,
                                                                    int carry_initial_prompt);