bindings/csharp/CrispASR/NativeMethods.cs

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace CrispASR
{
    /// <summary>
    /// Raw P/Invoke declarations for the crispasr shared library.
    /// The public <see cref="Session"/> class wraps these into safe,
    /// idiomatic C# types.
    /// </summary>
    internal static class NativeMethods
    {
        private const string Lib = "crispasr";

        // ---- Session lifecycle ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_open(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath, int nThreads);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_open_explicit(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string modelPath,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string backendName,
            int nThreads);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_session_close(IntPtr session);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_available_backends(
            byte[] outCsv, int outCap);

        // ---- Session setters ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_codec_path(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_voice(
            IntPtr s,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? refText);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_speaker_name(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_speaker_id(IntPtr s, int id);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_n_speakers(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_get_speaker_name(IntPtr s, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_instruct(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string instruct);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_is_custom_voice(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_is_voice_design(IntPtr s);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_punc_model(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string puncModel);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_hotwords(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string hotwords, float boost);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_g2p_dict(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string source);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_source_language(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string lang);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_target_language(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string lang);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_punctuation(IntPtr s, int enable);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_translate(IntPtr s, int enable);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_temperature(IntPtr s, float temperature, ulong seed);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_seed(IntPtr s, ulong seed);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_max_new_tokens(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_frequency_penalty(IntPtr s, float penalty);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_steps(IntPtr s, int steps);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_num_candidates(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_top_p(IntPtr s, float topP);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_top_k(IntPtr s, int topK);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_do_sample(IntPtr s, int enable);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_min_p(IntPtr s, float minP);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_repetition_penalty(IntPtr s, float r);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_cfg_weight(IntPtr s, float cfgWeight);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_tts_noise_temp(IntPtr s, float noiseTemp);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_exaggeration(IntPtr s, float exaggeration);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_max_speech_tokens(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_length_scale(IntPtr s, float scale);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_best_of(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_beam_size(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_grammar_text(
            IntPtr s,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string gbnfText,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string rootRule,
            float penalty);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_fallback_thresholds(
            IntPtr s, float entropyThold, float logprobThold,
            float noSpeechThold, float temperatureInc);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_alt_n(IntPtr s, int n);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_whisper_decode_extras(
            IntPtr s, int suppressNst,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string suppressRegex,
            int carryInitialPrompt);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_set_ask(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string prompt);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_kokoro_clear_phoneme_cache(IntPtr s);

        // ---- TTS synthesize ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_synthesize(
            IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
            out int outNSamples);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern void crispasr_pcm_free(IntPtr pcm);

        // ---- ASR transcription ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe(
            IntPtr s, float[] pcm, int nSamples);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe_lang(
            IntPtr s, float[] pcm, int nSamples,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? language);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe_vad(
            IntPtr s, float[] pcm, int nSamples, int sampleRate,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string vadModelPath,
            IntPtr optsOrNull);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_transcribe_vad_lang(
            IntPtr s, float[] pcm, int nSamples, int sampleRate,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string vadModelPath,
            IntPtr optsOrNull,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string? language);

        // ---- Result accessors ----
        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_result_n_segments(IntPtr result);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_result_segment_text(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_session_result_segment_t0(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_session_result_segment_t1(IntPtr result, int i);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int crispasr_session_result_n_words(IntPtr result, int iSeg);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern IntPtr crispasr_session_result_word_text(IntPtr result, int iSeg, int iWord);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_session_result_word_t0(IntPtr result, int iSeg, int iWord);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern long crispasr_session_result_word_t1(IntPtr result, int iSeg, int iWord);

        [DllImport(Lib, CallingConvention = CallingConvention.Cdecl)]
        internal static extern float crispasr_session_result_word_p(IntPtr result, int iSeg, int iWord);
